# sleekpr

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  package-portable.cmd  package-portable.ps1  quick-start.cmd  quick-start.ps1  rebuild.cmd  rebuild.ps1
docs/: preview-template-api.md
docs/superpowers/plans/: 2026-06-15-settings-window.md  2026-06-15-template-designer-phase3.md  2026-06-16-print-template-endpoint.md  2026-06-16-template-designer-library.md  2026-06-16-template-engine-phase1.md  2026-06-16-template-engine-phase2.md  2026-06-16-template-engine-phase3.md  2026-06-16-template-engine-phase4.md  2026-06-16-template-library-http.md  2026-06-17-array-grid-element.md  2026-06-17-designer-ruler-preprint.md  2026-06-17-template-designer-sample-data.md  2026-06-22-template-designer-editor-layout.md  2026-06-22-ui-workbench-refresh.md  2026-06-24-structural-route-designer-split.md  2026-06-24-template-designer-factory-split.md  2026-06-24-template-designer-inspector-split.md  2026-06-24-template-designer-layer-panel-split.md  2026-06-24-template-designer-workspace-split.md  2026-06-24-template-workspace-toolbar-split.md  2026-06-25-complex-table-designer.md  2026-06-25-complex-table-engine-phase1.md
docs/superpowers/specs/: 2026-06-15-settings-window-design.md  2026-06-15-template-designer-phase3-design.md  2026-06-16-template-engine-design.md  2026-06-25-complex-table-designer-design.md  2026-06-25-complex-table-engine-design.md
include/sleekpr/app/: AppTheme.h  FieldPresetManagerWindow.h  PaperSpecManagerWindow.h  PreviewWindow.h  SettingsWindow.h  TableAdvancedEditorPanel.h  TableColumnEditorPanel.h  TableColumnTextCodec.h  TemplateDesignerCommand.h  TemplateDesignerFactory.h  TemplateDesignerPresenter.h  TemplateDesignerPropertyModel.h  TemplateDesignerState.h  TemplateDesignerWindow.h  TemplateDragCoordinateMapper.h  TemplateElementHitTester.h  TemplateInspectorPanel.h  TemplateLayerPanel.h  TemplateLibraryPanel.h  TemplatePreviewLabel.h  TemplateTableCanvasEditor.h  TemplateTablePaginationOverlay.h  TemplateTablePaginationOverlayPlanner.h  TemplateWorkspacePanel.h  TemplateWorkspaceToolbar.h  WindowActivation.h
include/sleekpr/core/labels/: LabelItem.h  LabelPartItem.h  LabelPartRenderPlan.h  LabelRenderPlan.h  LabelRenderPlanner.h  LabelTemplateKey.h  TemplateOverrideKey.h
include/sleekpr/core/native/: NativeDrawCommand.h  NativeDrawCommandType.h  NativeLabelDrawingPlan.h  NativeLabelDrawingPlanner.h  NativePlanJsonSerializer.h  NativePrintDrawingPlan.h  SilverNativeLabelDrawingPlanner.h
include/sleekpr/core/printing/: LabelPaperSize.h  PrintUnitConverter.h
include/sleekpr/core/security/: AllowedOriginParser.h  LocalCorsPolicy.h  PrivateNetworkAccessPolicy.h
include/sleekpr/core/settings/: FileSettingsStore.h  LabelOffset.h  LocalHttpLimitSettings.h  PrintClientSettings.h  PrintClientSettingsJson.h  PrinterSelectionResolver.h  SettingsEditModel.h  TemplateElement.h  TemplateElementCatalog.h  TemplateElementOverride.h
include/sleekpr/core/templates/: DefaultPaperSpecs.h  DeviceProfileResolver.h  FieldPreset.h  FieldPresetJson.h  FieldPresetStore.h  FieldSchema.h  FieldSchemaJson.h  PaperSpec.h  PaperSpecJson.h  PaperSpecStore.h  TableElement.h  TableElementJson.h  TableElementLayout.h  TableElementRenderer.h  TemplateDocument.h  TemplateDocumentEditModel.h  TemplateDocumentFactory.h  TemplateDocumentJson.h  TemplateDocumentRenderer.h  TemplateDocumentValidator.h  TemplateLibraryStore.h  TemplateRenderContext.h  TemplateRenderContextBuilder.h
include/sleekpr/http/: LocalHttpLimits.h  LocalHttpRouteSupport.h  LocalHttpRouter.h  LocalHttpServer.h  PreviewRoutes.h  PrintRoutes.h  SettingsRoutes.h  TemplateRequestPlanner.h  TemplateRoutes.h
include/sleekpr/infrastructure/preview/: QrCodeMatrix.h  (+4 more)
packaging/: README-PORTABLE.txt
src/app/: AppTheme.cpp  FieldPresetManagerWindow.cpp  PaperSpecManagerWindow.cpp  PreviewWindow.cpp  SettingsWindow.cpp  TableAdvancedEditorPanel.cpp  TableColumnEditorPanel.cpp  TableColumnTextCodec.cpp  TemplateDesignerCommand.cpp  TemplateDesignerFactory.cpp  TemplateDesignerPresenter.cpp  TemplateDesignerState.cpp  TemplateDesignerWindow.cpp  TemplateDragCoordinateMapper.cpp  TemplateElementHitTester.cpp  TemplateInspectorPanel.cpp  TemplateLayerPanel.cpp  TemplateLibraryPanel.cpp  TemplatePreviewLabel.cpp  TemplateTableCanvasEditor.cpp  TemplateTablePaginationOverlayPlanner.cpp  TemplateWorkspacePanel.cpp  TemplateWorkspaceToolbar.cpp  WindowActivation.cpp  main.cpp
src/core/labels/: LabelRenderPlanner.cpp  TemplateOverrideKey.cpp
src/core/native/: NativeLabelDrawingPlanner.cpp  NativePlanJsonSerializer.cpp  SilverNativeLabelDrawingPlanner.cpp
src/core/printing/: LabelPaperSize.cpp  PrintUnitConverter.cpp
src/core/security/: AllowedOriginParser.cpp  LocalCorsPolicy.cpp  PrivateNetworkAccessPolicy.cpp
src/core/settings/: FileSettingsStore.cpp  PrintClientSettingsJson.cpp  PrinterSelectionResolver.cpp  SettingsEditModel.cpp  TemplateElementCatalog.cpp
src/core/templates/: DefaultPaperSpecs.cpp  DeviceProfileResolver.cpp  FieldPresetJson.cpp  FieldPresetStore.cpp  FieldSchemaJson.cpp  PaperSpecJson.cpp  PaperSpecStore.cpp  TableElementJson.cpp  TableElementLayout.cpp  TableElementRenderer.cpp  TemplateDocumentEditModel.cpp  TemplateDocumentFactory.cpp  TemplateDocumentJson.cpp  TemplateDocumentRenderer.cpp  TemplateDocumentValidator.cpp  TemplateLibraryStore.cpp  TemplateRenderContextBuilder.cpp
src/http/: LocalHttpRouteSupport.cpp  LocalHttpRouter.cpp  LocalHttpServer.cpp  PreviewRoutes.cpp  PrintRoutes.cpp  SettingsRoutes.cpp  TemplateRequestPlanner.cpp  TemplateRoutes.cpp
src/infrastructure/preview/: LabelPreviewImageRenderer.cpp  LabelPreviewService.cpp  PreviewLabelFactory.cpp  QrCodeMatrix.cpp  QrCodeMatrixRenderer.cpp
src/infrastructure/printing/: QrModulePixelLayout.cpp  QtLabelPrintEngine.cpp
src/infrastructure/rendering/: TextAutoFitSizer.cpp
tests/: CMakeLists.txt  tst_app.cpp  tst_core.cpp  tst_http.cpp
tests/js/: sleekpr-print-client.test.mjs
web/: sleekpr-print-client.js
(+4 files in other folders)
